argocd/applications/client-projects/cardio-remote-monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardio-api-deployment
  namespace: client-projects
  labels:
    app: cardio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardio-api
  template:
    metadata:
      labels:
        app: cardio-api
        deployment: cardio-api
    spec:
      containers:
        - name: cardio-api
          image: swr.eu-de.otc.t-systems.com/client-projects/cardio-monitoring:v1.0.0-dev0
          ports:
            - containerPort: 8000
              name: fastapi
      imagePullSecrets:
        - name: docker-secret-johannes
