argocd/applications/client-projects/cardio-remote-monitoring/deployments-ml-models.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-hrv-stress-level-deployment
  namespace: client-projects
  labels:
    app: cardio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardio-api
  template:
    metadata:
      labels:
        app: cardio-api
        deployment: ml-hrv-stress-level
    spec:
      containers:
        - name: ml-hrv-stress-level
          image: swr.eu-de.otc.t-systems.com/analytics/hrv-stress-level:0.0.1
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: docker-secret-johannes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-national-early-warning-score-deployment
  namespace: client-projects
  labels:
    app: cardio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardio-api
  template:
    metadata:
      labels:
        app: cardio-api
        deployment: ml-national-early-warning-score
    spec:
      containers:
        - name: ml-hrv-stress-level
          image: swr.eu-de.otc.t-systems.com/analytics/national-early-warning-score:0.0.2
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: docker-secret-johannes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-sepsis-prediction-deployment
  namespace: client-projects
  labels:
    app: cardio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardio-api
  template:
    metadata:
      labels:
        app: cardio-api
        deployment: ml-sepsis-prediction
    spec:
      containers:
        - name: ml-hrv-stress-level
          image: swr.eu-de.otc.t-systems.com/analytics/sepsis-prediction:0.0.1
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: docker-secret-johannes
