argocd/applications/client-projects/cardio-remote-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardio-api-service
  namespace: client-projects
spec:
  selector:
    app: cardio-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
