argocd/applications/client-projects/cardio-remote-monitoring/ingress-oauth2-proxy.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardio-api-ingress-oauth2-proxy
  namespace: client-projects
  labels:
    app: cardio-api

  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
    - hosts:
        - cardio-api-test.tcc-clinicalsolutions.de
      secretName: cardio-api-tls
  rules:
    - host: cardio-api-test.tcc-clinicalsolutions.de
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-cardio-api
                port:
                  name: http
