argocd/applications/client-projects/cardio-remote-monitoring/network-policies-ml-models.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fastapi-ml-hrv-stress-level
  namespace: client-projects
spec:
  podSelector:
    matchLabels:
      app: cardio-api
      deployment: ml-hrv-stress-level
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cardio-api
              deployment: cardio-api

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fastapi-ml-national-early-warning-score
  namespace: client-projects
spec:
  podSelector:
    matchLabels:
      app: cardio-api
      deployment: ml-national-early-warning-score
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cardio-api
              deployment: cardio-api

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fastapi-ml-sepsis-prediction
  namespace: client-projects
spec:
  podSelector:
    matchLabels:
      app: cardio-api
      deployment: ml-sepsis-prediction
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cardio-api
              deployment: cardio-api
